# Compilerbau-praktika

CB07/: CMakeLists.txt  Makefile  RefCounter.cpp  RefCounter.h  RingBuffer.cpp  RingBuffer.h  SmartToken.cpp  SmartToken.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  main.cpp
blatt8/interpreter/src/main/java/de/hsbi/interpreter/: Resolver.java
blatt8/interpreter/src/main/java/de/hsbi/interpreter/ast/: CallExpr.java  VarExpr.java
Übung 1/: Compilerbau praktikum 1.odt  Post Mortem Compilerbau 1.odt
Übung 2/: Postmortem2.odt
